--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 theme: jekyll-theme-minimal
 title: Seda Bilaloglu
+social:
+- {icon: 'linkedin', link: 'https://www.linkedin.com/in/seda-bilaloglu-013b9a2b/'}
+- {icon: 'google-scholar', link: 'https://scholar.google.com/citations?user=7E1r-jQAAAAJ&hl=en'}
 google_analytics: UA-138345422-1
 
 
