--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: Seda Bilaloglu
 social:
 - {icon: 'linkedin', link: 'https://www.linkedin.com/in/seda-bilaloglu-013b9a2b/'}
 - {icon: 'google-scholar', link: 'https://scholar.google.com/citations?user=7E1r-jQAAAAJ&hl=en'}
+- {icon: 'https://twitter.com/sedabilaloglu'}
 google_analytics: UA-138345422-1
 
 
