--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 title: Seda Bilaloglu
 social:
 - {icon: 'linkedin', link: 'https://www.linkedin.com/in/seda-bilaloglu-013b9a2b/'}
