--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,15 @@ theme: jekyll-theme-dinky
 title: Seda Bilaloglu
 description: Welcome to my site!
 
-social:
-- {icon: 'linkedin', link: 'https://www.linkedin.com/in/seda-bilaloglu-013b9a2b/'}
-- {icon: 'google-scholar', link: 'https://scholar.google.com/citations?user=7E1r-jQAAAAJ&hl=en'}
-- {icon: 'https://twitter.com/sedabilaloglu'}
+linkedin:
+  zip_url: https://www.linkedin.com/in/seda-bilaloglu-013b9a2b/
+  
+google-scholar:
+  zip_url: https://scholar.google.com/citations?user=7E1r-jQAAAAJ&hl=en
+  
+twitter:
+  zip_url: https://twitter.com/sedabilaloglu
+
 google_analytics: UA-138345422-1
 
 
