--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-dinky
 title: Seda Bilaloglu
-description: Welcome to my site!
+description: Welcome to my site! I am a data scientist/engineer and interested in Machine Learning applications in healthcare.
 
 linkedin:
   zip_url: https://www.linkedin.com/in/seda-bilaloglu-013b9a2b/
