--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-dinky
+theme: jekyll-theme-minima
 title: Seda Bilaloglu
 description: Welcome to my site! I am a data scientist/engineer and interested in Machine Learning applications in healthcare.
 
